--- a/notebooks/contract_details.ipynb
+++ b/notebooks/contract_details.ipynb
@@ -358,6 +358,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "OptionComputation(impliedVol=0.3672120415438584, delta=None, optPrice=0.24, pvDividend=None, gamma=None, vega=None, theta=None, undPrice=49.52)"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "intc = Option('INTC', '20200911', 49, 'P', 'SMART')\n",
+    "greeks = ib.calculateImpliedVolatility(contract = intc, optionPrice = 0.24, underPrice = 49.52)\n",
+    "greeks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "OptionComputation(impliedVol=2.02907477229124, delta=None, optPrice=2.0, pvDividend=None, gamma=None, vega=None, theta=None, undPrice=49.55)"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "greeks"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
